# rdmacomm

./: CMakeLists.txt  README.md
include/: Communicator.h  RdmaCommunicator.h  ktmrdma.h  utils.h
src/: RdmaCommunicator.cpp  clientcomm_main.cpp  ktmrdma.cpp  servercomm_main.cpp
src/client/: client_main.cpp  clientcomm_main.cpp
src/ktmrdma/: RdmaCommunicator.cpp  ktmrdma.cpp
src/server/: server_main.cpp  servercomm_main.cpp
